# outlive-protocol

./: .env.example  .gitignore  README.md  SKILL.md  config.example.yaml  crons.example.md  paths.sh  pyproject.toml  requirements.txt
bootstrap/: env.py  init_db.py
data/: baseline.example.md  digest-state.example.json  gurus.example.json  recipes.example.json  user-profile.example.yaml
references/: hash_based_imports.md
scripts/: config.py  daily_import.py  import_healthkit.py  import_medications.py  init_db.py  init_events.py  log_event.py  log_nutrition.py  migrate_add_file_hash.py  nutrition_summary.py  query_events.py  sync_hevy.py  sync_libre.py  test_suite.py
server/: trigger-import.sh  upload-server.ts
shell/: paths.sh
skills/analyze-health-data/: SKILL.md
skills/analyze-health-data/references/: attia-framework.md  report-templates.md  target-ranges.md
skills/coach-cardio/: SKILL.md
skills/coach-cardio/references/: queries.md
skills/coach-nutrition/: SKILL.md
skills/coach-nutrition/references/: queries.md
skills/coach-nutrition/scripts/: config.py  nutrition_summary.py
skills/coach-nutrition/tests/: conftest.py  test_nutrition.py
skills/coach-strength/: SKILL.md
skills/log-nutrition/: SKILL.md
skills/sync-health-data/: SKILL.md
sub-skills/analyze-health-data/: SKILL.md
sub-skills/coach-cardio/: SKILL.md
sub-skills/coach-strength/: SKILL.md
sub-skills/coach-workout/: SKILL.md
sub-skills/log-nutrition/: SKILL.md
sub-skills/sync-health-data/: SKILL.md
tests/: conftest.py  test_bootstrap.py  test_core.py  test_suite.py
(+29 files in other folders)
